# scarper

./: .gitignore  Cargo.toml  README.md  ScarperWatch.toml  justfile  rustfmt.toml
.githooks/: pre-commit
plugins_src/: Cargo.toml  justfile
plugins_src/plug_gimp/: Cargo.toml
plugins_src/plug_gimp/src/: lib.rs
src/: lib.rs  main.rs  plugins.rs
